(library
 (name bound)
 (synopsis "A library for generating symbolic bounds")
 (public_name bound)
 (private_modules polyLexer polyParse expLexer expParse)
 (libraries zarith batteries))

(ocamllex
(modules polyLexer expLexer))

(menhir
(modules polyTokens)
(flags --only-tokens)
)

(menhir
(modules polyTokens polyParse)
(merge_into polyParse)
(flags --external-tokens PolyTokens)
)

(menhir
(modules expParse))

;(env
; (dev
;   (flags (:standard -warn-error -A))))