(library
 (name bound)
 (synopsis "A library for generating symbolic bounds")
 (public_name bound)
 (private_modules polyLexer polyParse expLexer expParse prePoly)
 (libraries zarith batteries lp lpglpk)
 )


(ocamllex
(modules polyLexer expLexer))

(menhir
(modules polyTokens)
(flags --only-tokens)
)

(menhir
(modules polyTokens polyParse)
(merge_into polyParse)
(flags --external-tokens PolyTokens)
)

(menhir
(modules expParse))