(library
 (name lpglpk)
 (wrapped false)
 (libraries lp ctypes ctypes.foreign)
 (package bound)
 (modules :standard \ gen bindings)
 (foreign_stubs
  (language c)
  (names stub)
  (flags :standard -lglpk -w)
 )
 (c_library_flags :standard -lglpk)
 )

 (executable
  (name gen)
  (modules gen bindings)
  (libraries ctypes.stubs ctypes)
)

(rule
  (targets stub.c stub.ml)
  (deps gen.exe)
  (action (run ./gen.exe))
)

(rule
  (targets bind.ml)
  (deps bindings.ml)
  (action (copy bindings.ml bind.ml))
)